--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Changes in release 0.7.1
+
+* Bug fixes
+
 Changes in release 0.7
 
  * Support for KCM, a process based credential cache
@@ -11,6 +15,12 @@ Changes in release 0.7
  * Adding new and improve old documentation
 
  * Bug fixes
+
+Changes in release 0.6.5
+
+ * fix vulnerabilities in telnetd
+
+ * unbreak Kerberos 4 and kaserver
 
 Changes in release 0.6.4
 
