--- a/appl/telnet/ChangeLog
+++ b/appl/telnet/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-08  Love Hörnquist Åstrand  <lha@it.su.se>
+
+	* telnetd/telnetd.c: 1.76+delta:Fix printing of /etc/issue{,.net}.
+
 2005-05-20  Love Hörnquist Åstrand  <lha@it.su.se>
 
 	* telnetd/sys_term.c (start_login): put utmpx code into a new
