--- a/cf/ChangeLog
+++ b/cf/ChangeLog
@@ -1,3 +1,16 @@
+2005-08-12  Love Hörnquist Åstrand  <lha@it.su.se>
+
+	* crypto.m4: 1.21: Add <sys/types.h>, OpenSSL 0.9.8 needs it for
+	size_t.  From: Quanah Gibson-Mount <quanah@stanford.edu>
+
+2005-06-16  Love Hörnquist Åstrand  <lha@it.su.se>
+
+	* pthreads.m4: 1.11: disable threads on aix because of utmp/utmpx
+	problems
+
+	* broken-getaddrinfo.m4: 1.6: check for brokenness in getaddrinfo
+	on AIX that can't handle "0" as port number.
+
 2005-06-03  Love Hörnquist Åstrand  <lha@it.su.se>
 
 	* pthreads.m4: rework how pthreads support to turned on/off,
