--- a/lib/des/ChangeLog
+++ b/lib/des/ChangeLog
@@ -1,3 +1,17 @@
+2007-01-20  Love Hörnquist Åstrand  <lha@it.su.se>
+
+	* test_rand.c: Allow select rand method.
+
+	* rand-unix.c: expose _hc_rand_unix_status
+	
+	* randi.h: expose _hc_rand_unix_status and the internal
+	RAND_METHODs
+
+	* rand.c: Implement RAND_load_file and RAND_write_file.  Select
+	UNIX random device if available, otherwise use Fortuna.
+
+	* Add EGD/PRNGD support
+
 2007-01-17  Love Hörnquist Åstrand  <lha@it.su.se>
 
 	* fortuna: Add fortuna based on Marko Kreen's pgcrypt, no enabled yet
