--- a/lib/ntlm/ChangeLog
+++ b/lib/ntlm/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-31  Love Hörnquist Åstrand  <lha@it.su.se>
+
+	* test_ntlm.c: 1.4: No need to include <gssapi.h>.
+	
 2007-01-04  Love Hörnquist Åstrand  <lha@it.su.se>
 
 	* Makefile.am: add LIB_roken for test_ntlm
