--- a/lib/gssapi/ChangeLog
+++ b/lib/gssapi/ChangeLog
@@ -1,5 +1,9 @@
-2007-01-17  Love Hörnquist Åstrand  <lha@it.su.se>
+2007-01-31  Love Hörnquist Åstrand  <lha@it.su.se>
 
+	* mech/gss_display_status.c: 1.7: Use right printf formater.
+	
+2007-01-17  Love Hörnquist Åstrand  <lha@it.su.se>
+	
 	* test_context.c: Don't assume bufer from gss_display_status is
 	ok.
 
