--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-01  Love Hörnquist Åstrand  <lha@it.su.se>
+
+	* lib/hdb/hdb-ldap.c: 1.58: Set hdb->hdb_db for ldap.
+	
 2007-01-31  Love Hörnquist Åstrand  <lha@it.su.se>
 
 	* configure.in: 0.8-rc5
