--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-02-02  Love Hörnquist Åstrand  <lha@it.su.se>
 
+	* kdc/digest.c: 1.25: Use right size, from Klas Lindfors.  1.24:
+	First version from kllin.
+
+	* kuser/kdigest.c: 1.11: Set client nonce if available, from Klas.
+
 	* kuser/kdigest.c: Don't restrict the type.
 	
 2007-02-01  Love Hörnquist Åstrand  <lha@it.su.se>
