--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2007-02-02  Love Hörnquist Åstrand  <lha@it.su.se>
 
+	* lib/krb5/digest.c: rename hash-a1 to session key
+
 	* kdc/digest.c: 1.25: Use right size, from Klas Lindfors.  1.24:
 	First version from kllin.
 
