--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-03  Love Hörnquist Åstrand  <lha@it.su.se>
+
+	* merge kdigest changes with head
+
 2007-02-02  Love Hörnquist Åstrand  <lha@it.su.se>
 
 	* lib/krb5/digest.c: rename hash-a1 to session key
