--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-02-03  Love Hörnquist Åstrand  <lha@it.su.se>
 
+	* lib/krb5/pkinit.c: 1.121: pass extra flags for detached signatures.
+	
+	* kdc/pkinit.c: 1.87: pass extra flags for detached signatures.
+
 	* merge kdigest changes with head
 
 2007-02-02  Love Hörnquist Åstrand  <lha@it.su.se>
