--- a/lib/hx509/ChangeLog
+++ b/lib/hx509/ChangeLog
@@ -1,5 +1,15 @@
 2007-02-03  Love Hörnquist Åstrand  <lha@it.su.se>
 
+	* file.c: 1.6: Allow mapping using heim_octet_string.
+
+	* hxtool.c: 1.101: Add options to generate detached signatures.
+
+	* cms.c: 1.53: Add flags to generate detached signatures.
+
+	* hx509.h: 1.19: Flag to generate detached signatures.
+
+	* test_cms.in: 1.26: test detached sigatures.
+
 	* cert.c: 1.87: Fix printing and plug leak-on-error.
 	
 2007-01-31  Love Hörnquist Åstrand  <lha@it.su.se>
