--- a/lib/hx509/ChangeLog
+++ b/lib/hx509/ChangeLog
@@ -1,3 +1,8 @@
+2007-02-04  Love Hörnquist Åstrand  <lha@it.su.se>
+
+	* hxtool-commands.in: 1.49: Add options to generate detached
+	signatures.
+	
 2007-02-03  Love Hörnquist Åstrand  <lha@it.su.se>
 
 	* file.c: 1.6: Allow mapping using heim_octet_string.
