--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,13 @@
+2007-02-09  Love Hörnquist Åstrand  <lha@it.su.se>
+
+	* doc/setup.texi: 1.88: Spelling, from Guido Guenther
+	
 2007-02-08  Love Hörnquist Åstrand  <lha@it.su.se>
 
 	* lib/krb5/rd_cred.c: 1.30: Plug memory leak, from Michael B Allen.
 
 2007-02-03  Love Hörnquist Åstrand  <lha@it.su.se>
-
+	
 	* lib/krb5/pkinit.c: 1.121: pass extra flags for detached signatures.
 	
 	* kdc/pkinit.c: 1.87: pass extra flags for detached signatures.
