--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2007-02-09  Love Hörnquist Åstrand  <lha@it.su.se>
 
+	* lib/krb5/keytab.c: 1.65: (krb5_kt_get_entry): Use
+	krb5_kt_get_full_name to print out the keytab name.
+
 	* doc/setup.texi: 1.88: Spelling, from Guido Guenther
 	
 2007-02-08  Love Hörnquist Åstrand  <lha@it.su.se>
