--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-02-22  Love Hörnquist Åstrand  <lha@it.su.se>
+
+	* kdc/hprop.c: 1.84: (propagate_database): on any failure, drop
+	the connection to the peer and try next one.
+	
 2007-02-09  Love Hörnquist Åstrand  <lha@it.su.se>
 
 	* lib/krb5/keytab.c: 1.65: (krb5_kt_get_entry): Use
