--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,32 @@
 2007-02-22  Love Hörnquist Åstrand  <lha@it.su.se>
 
+	* kuser/kimpersonate.1: 1.3: Small fixes, from David Love.
+
+	* lib/krb5/krb5_digest.3: 1.3: Small fixes, from David Love.
+
+	* lib/krb5/krb5_aname_to_localname.3: 1.5: Small fixes, from David
+	Love.
+
+	* kcm/client.c: 1.4: (kcm_ccache_new_client): Cast snprintf'ed
+	value.
+
+	* kdc/krb5tgs.c: 1.29: Only check service key for cross realm PACs.
+	1.28: Don't check PACs on cross realm requests.
+	
+	* kdc/kerberos5.c: 1.236: Select a session enctype from the list
+	of the crypto systems supported enctype, is supported by the
+	client and is one of the enctype of the enctype of the krbtgt.
+	
+	The later is used as a hint what enctype all KDC are supporting to
+	make sure a newer version of KDC wont generate a session enctype
+	that and older version of a KDC in the same realm can't decrypt.
+	
+	But if the KDC admin is paranoid and doesn't want to have "no the
+	best" enctypes on the krbtgt, lets save the best pick from the
+	client list and hope that that will work for any other KDCs.
+	
+	Reported by metze.
+	
 	* kdc/hprop.c: 1.84: (propagate_database): on any failure, drop
 	the connection to the peer and try next one.
 	
