--- a/lib/gssapi/ChangeLog
+++ b/lib/gssapi/ChangeLog
@@ -1,5 +1,13 @@
-2007-01-31  Love Hörnquist Åstrand  <lha@it.su.se>
+2007-02-22  Love Hörnquist Åstrand  <lha@it.su.se>
 
+	* krb5/copy_ccache.c: 1.18: Try to leak less memory in the failure
+	case.
+
+	* gss_acquire_cred.3: 1.26-1.27: Add link for
+	gsskrb5_register_acceptor_identity.
+	
+2007-01-31  Love Hörnquist Åstrand  <lha@it.su.se>
+	
 	* mech/gss_display_status.c: 1.7: Use right printf formater.
 	
 2007-01-17  Love Hörnquist Åstrand  <lha@it.su.se>
