--- a/cf/ChangeLog
+++ b/cf/ChangeLog
@@ -1,3 +1,8 @@
+2007-04-11  Love Hörnquist Åstrand  <lha@it.su.se>
+
+	* roken-frag.m4: 1.66: drop test for broken getnameinfo, that old
+	aix is no longer relevant.
+	
 2007-01-08  Love Hörnquist Åstrand  <lha@it.su.se>
 
 	* roken-frag.m4: More headerfiles for iruserok prototype check.
