--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-04-11  Love Hörnquist Åstrand  <lha@it.su.se>
+
+	* Heimdal 0.8 release
+
 2007-02-22  Love Hörnquist Åstrand  <lha@it.su.se>
 
 	* kuser/kimpersonate.1: 1.3: Small fixes, from David Love.
