--- a/lib/des/ChangeLog
+++ b/lib/des/ChangeLog
@@ -1,3 +1,46 @@
+2007-01-31  Love Hörnquist Åstrand  <lha@it.su.se>
+
+	* rand-egd.c: 1.4: Make get_bytes static.
+
+	* rand.c: 1.14: (RAND_write_file): default to failure.
+	
+2007-01-21  Love Hörnquist Åstrand  <lha@it.su.se>
+	
+	* Makefile.am: clean more files
+
+	* rand-egd.c: access private functions though the RAND_METHOD
+	switch, move global egd function to rand-egd.c
+
+	* rand-fortuna.c: access private functions though the RAND_METHOD
+	switch
+
+	* rand-unix.c: unexport private functions.
+
+	* randi.h: Unexport internal functions.
+
+	* rand.c: access private functions though the RAND_METHOD switch,
+	don't truncate the seed-file, move global egd function to
+	rand-egd.c
+
+	* test_crypto.in: add basic random tests
+
+	* rand-egd.c: SGI cc doesn' like return void_returning_function();
+	in a void returning function.
+	
+2007-01-20  Love Hörnquist Åstrand  <lha@it.su.se>
+
+	* test_rand.c: Allow select rand method.
+
+	* rand-unix.c: expose _hc_rand_unix_status
+	
+	* randi.h: expose _hc_rand_unix_status and the internal
+	RAND_METHODs
+
+	* rand.c: Implement RAND_load_file and RAND_write_file.  Select
+	UNIX random device if available, otherwise use Fortuna.
+
+	* Add EGD/PRNGD support
+
 2007-01-17  Love Hörnquist Åstrand  <lha@it.su.se>
 
 	* fortuna: Add fortuna based on Marko Kreen's pgcrypt, no enabled yet
